# discover

./: Cargo.toml
base/sender_plugin/: Cargo.toml
base/sender_plugin/src/: lib.rs  res.rs
base/udp_client/: Cargo.toml
base/udp_client/src/: lib.rs
base/ws_plugin/: Cargo.toml
base/ws_plugin/src/: lib.rs
crate/discover_plugin/: Cargo.toml
crate/discover_plugin/src/: lib.rs  sys.rs
examples/: broadcast.rs
src/: main.rs
